3.2.13
	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
	  defer it until s4sync does the synchronization
	+ Typo fix in netbios validation
	+ Check if objects are system critical before deletion
	+ Improved migration code from 3.2.11
3.2.12
	+ Provision - Clear link attribute on __USERS__ entry when provisioning as
	  adc
	+ Provision - Remove DomainAdmins,Administrator and Guest from openLDAP
	              when reprovisioning as additional DC
	+ Do not hide domain guest account
	+ Fix share guest access, based on domain guest account enabled status
	+ LDB - Do not return users holding a servicePrincipalName by default
	+ Provision - Improve the LDAP OUs purge after join domain
	+ s4sync - Serveral fixes to make it more robust
	+ OU - Improve creation code
	+ LDB - Return OUs ordered, parents before childs
	+ Provision - Link accounts holding zentyal service principals
	+ Provision - Improve OU loading, skip zentyal internal OUs and linked
	+ Provision - Link containers at provision stage, creating them if not
	              exists. Ignore not linked OUs for sync operations.
	+ Provision - Set kerberos linked OU as visible only in advanced mode
	+ Provision - Check no OUs are created below OU=Users. This violate the
	              AD DIT, as OU=Users is linked to CN=Users.
	+ Do not import accounts while provisioning or joining a domain, rely on
	  s4sync
3.2.11
	+ Remove useless chown workaround
	+ Forbid sharing '/opt'
	+ Add filesystem format check defining system shares
	+ Update user CN on user modifications
3.2.10
	+ Revert case sensitive shares. Use new SMB raw client library feature
	  per packet case sensitive.
	+ Throw external exception instead internal if error changing user password
	+ Show user friendly error creating system shares
	+ Add precondition to GPO models, do not allow edition if server is ADC
	+ Fix error in backup or clicking on edit GPO when server is ADC and
	  sysvol is not yet replicated