@@ -1,3 +1,6 @@
+HEAD
+	+ EBox::Samba::LdbObject::deleteObject - Delete all childs before self
+	  deletion
 3.2.13
 	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
 	  defer it until s4sync does the synchronization
